--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-js-lib",
+  "name": "@cigalecigales/hellolib",
   "version": "1.0.0",
   "main": "dist/hellolib.cjs.js",
   "module": "dist/hellolib.es.js",
@@ -34,6 +34,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.2.0",
